--- a/Public_html/css/about-page.css
+++ b/Public_html/css/about-page.css
@@ -113,7 +113,7 @@
     }
 
     .statistics-panel {
-        
+
         position: relative;
         top: 300px;
         height: 189px;
@@ -128,7 +128,7 @@
         color: var(--branco);
 
         .statistics {
-            
+
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -162,6 +162,8 @@
         }
     }
 }
+
+/*      *     Responsividade     Celular         */
 
 @media (max-width: 768px) {
 
@@ -199,7 +201,6 @@
                 flex-direction: column;
                 gap: 1rem;
 
-
                 .profile-1 {}
 
                 .profile {
@@ -207,9 +208,13 @@
 
                     .profile-text {
 
-                        .profile-name {}
+                        .profile-name {
+                            font-size: 18px;
+                        }
 
-                        .role {}
+                        .role {
+                            font-size: 12px;
+                        }
                     }
                 }
             }
@@ -247,21 +252,12 @@
     }
 }
 
-@media (min-width: 769px) and (max-width: 1440px){
-    .about-page{
-        margin-bottom: 30rem;
-        /* height: 180vh; */
-    }
-}
+/*       *    Responsividade     Landscape Celular         */
 
-@media screen and (orientation: landscape) and (max-width: 1024px) {
-    .about-page {
-        /* height: 250vh; */
-    }
+@media screen and (orientation: landscape) and (max-width: 768px) {
+    .about-page {}
 
     .about-page-content {
-        
-
         .block1 {
             .title {
                 font-size: 25px;
@@ -303,6 +299,49 @@
                     margin-left: 1rem;
                 }
             }
+        }
+    }
+}
+
+/*       *    Responsividade     Tablet         */
+
+@media (min-width: 768px) and (max-width: 1440px) {
+    .about-page {
+        margin-bottom: 30rem;
+        /* height: 180vh; */
+    }
+}
+
+/*      *     Responsividade     Tablet Landscape         */
+
+@media screen and (orientation: landscape) and (min-width: 768px) and (max-width: 1200px) {}
+
+/*      *     Responsividade     Notebook         */
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+    .about-page-content {
+        .block1 {
+            .title {
+                font-size: 30px;
+            }
+            .sub {
+                font-size: 12px;
+            }
+            .profile-cards {
+                .profile {
+                    .profile-text {
+                        .profile-name {
+                            font-size: 18px;
+                        }
+                        .role {
+                            font-size: 12px;
+                        }
+                    }
+                }
+            }
+        }
+        .statistics-panel {
+            top: 150px;
         }
     }
 }
