--- a/Public_html/css/services-page.css
+++ b/Public_html/css/services-page.css
@@ -52,6 +52,8 @@
     }
 }
 
+/*      *     Responsividade     Celular         */
+
 @media (max-width: 768px) {
 
     .services-page {
@@ -105,21 +107,49 @@
 
 }
 
+/*       *    Responsividade     Landscape Celular         */
+
+@media screen and (orientation: landscape) and (max-width: 768px) {
+    .services-page-content {
+        top: 80px;
+    }
+}
+
+/*       *    Responsividade     Tablet         */
+
 @media (min-width: 769px) and (max-width: 1440px) {
 
     .services-page {
-        /* height:160vh ; */
         margin-bottom: 20rem;
     }
 }
 
-@media screen and (orientation: landscape) and (max-width: 1024px) {
+/*      *     Responsividade     Tablet Landscape         */
+
+@media screen and (orientation: landscape) and (min-width: 768px) and (max-width: 1200px) {}
+
+/*      *     Responsividade     Notebook         */
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+
     .services-page {
-        /* height: 280vh; */
-        
+        .block1 {
+            .title {
+                font-size: 30px;
+            }
+        }
+        .block2 {
+            width: 50%;
+            .service {
+                .title {
+                    font-size: 30px;
+                }
+                .sub-title {
+                    font-size: 12px;
+                }
+            }
+        }
     }
 
-    .services-page-content {
-        top: 80px;
-    }
+
 }
